k8s/kubectl_helm/padogrid/padogrid-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: padogrid-tls-ingress
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - padogrid.demo.com
    secretName: tls-secret
  rules:
  - host: "padogrid.demo.com"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: padogrid-service
            port:
              number: 8888
